jagat | horizontal scroll fix

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -9,6 +9,7 @@ html {
     width: 100%;
     height: 100%;
     font-family: 'Calibri','PT Sans Narrow', sans-serif;
+    overflow-x: hidden;
 }
 
 h1,
